filterd by weekday

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "LunchBot",
+  "name": "lunchlot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "10.16.0"
+  },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "André Vollrath",
