--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
-  },"engines": {
+  },
+  "engines": {
     "node": "12.11.1"
   },
- 
   "keywords": [],
   "author": "André Vollrath",
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
+    "node-schedule": "^1.3.2",
     "request": "^2.88.0",
     "slackbots": "^1.2.0"
   }
