--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "André Vollrath",
   "license": "MIT",
   "dependencies": {
+    "@slack/web-api": "^7.0.2",
+    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
+    "express": "^4.19.1",
     "node-schedule": "^1.3.2",
     "request": "^2.88.0",
     "slackbots": "^1.2.0"
