--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "12.11.1"
+    "node": "18.x"
   },
   "keywords": [],
   "author": "André Vollrath",
