--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lunchbot",
   "version": "0.0.3",
-  "description": "informs about the daily menu at Klondyke",
+  "description": "informs about the daily lunch menus in Pasila",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -16,6 +16,7 @@
     "@slack/web-api": "^7.0.2",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
-    "express": "^4.19.1"
+    "express": "^4.19.1",
+    "xml2js": "^0.6.2"
   }
 }
